修复细节问题：夜间模式文字颜色和中英文切换
1. 修复单品支付区域夜间模式文字黑色问题
   - 替换#f8f9fa背景色为var(--bg-secondary)
   - 替换#2c3e50文字颜色为var(--text-primary)
   - 替换#333文字颜色为var(--text-primary)

2. 修复中英文切换问题
   - 为'开始成长之旅'添加data-zh和data-en属性
   - 为'查看资源'添加data-zh和data-en属性

3. 全面修复所有页面硬编码颜色
   - health-check.html
   - subscribe.html
   - products.html

--- a/health-check.html
+++ b/health-check.html
@@ -187,7 +187,7 @@
 
         .check-name {
             font-weight: 600;
-            color: #2c3e50;
+            color: var(--text-primary);
         }
 
         .check-status {
