--- a/index.html
+++ b/index.html
@@ -2665,10 +2665,10 @@
             <!-- CTA按钮组 -->
             <div style="margin-top: 2.5rem; display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
                 <a href="products.html" style="padding: 1rem 2.5rem; background: #000000; color: white; border: none; border-radius: 50px; font-size: 1.1rem; font-weight: 700; cursor: pointer; text-decoration: none; transition: all 0.3s; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); white-space: nowrap;" onmouseover="this.style.transform='translateY(-3px)'" onmouseout="this.style.transform='translateY(0)'">
-                    🚀 开始成长之旅
+                    <span data-zh="🚀 开始成长之旅" data-en="🚀 Start Journey">🚀 开始成长之旅</span>
                 </a>
                 <a href="#resources" style="padding: 1rem 2.5rem; background: rgba(0, 0, 0, 0.1); color: var(--accent); border: 2px solid var(--accent); border-radius: 50px; font-size: 1.1rem; font-weight: 600; cursor: pointer; text-decoration: none; transition: all 0.3s; white-space: nowrap;" onmouseover="this.style.background='rgba(0, 0, 0, 0.2)'" onmouseout="this.style.background='rgba(0, 0, 0, 0.1)'">
-                    📦 查看资源
+                    <span data-zh="📦 查看资源" data-en="📦 View Resources">📦 查看资源</span>
                 </a>
             </div>
             
