--- a/subscribe.html
+++ b/subscribe.html
@@ -105,7 +105,7 @@
         }
 
         h1 {
-            color: #2c3e50;
+            color: var(--text-primary);
             margin-bottom: 15px;
             font-size: 2rem;
         }
@@ -125,7 +125,7 @@
         }
 
         .benefits h3 {
-            color: #2c3e50;
+            color: var(--text-primary);
             margin-bottom: 15px;
             text-align: center;
         }
