--- a/index.html
+++ b/index.html
@@ -2579,10 +2579,10 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="archive.html" data-zh="📚 文章归档" data-en="📚 Archive">📚 文章归档</a></li>
-                            <li><a href="#articles" data-category="life" onclick="filterByCategory('life', event)">小Lin记</a></li>
-                            <li><a href="#articles" data-category="thinking" onclick="filterByCategory('thinking', event)">小Lin析</a></li>
-                            <li><a href="#articles" data-category="reading" onclick="filterByCategory('reading', event)">小Lin读</a></li>
-                            <li><a href="#articles" data-category="history" onclick="filterByCategory('history', event)">小Lin说</a></li>
+                            <li><a href="#articles" data-category="life" onclick="filterByCategory('life', event)" data-zh="小Lin记" data-en="Life Notes">小Lin记</a></li>
+                            <li><a href="#articles" data-category="thinking" onclick="filterByCategory('thinking', event)" data-zh="小Lin析" data-en="Thinking">小Lin析</a></li>
+                            <li><a href="#articles" data-category="reading" onclick="filterByCategory('reading', event)" data-zh="小Lin读" data-en="Reading">小Lin读</a></li>
+                            <li><a href="#articles" data-category="history" onclick="filterByCategory('history', event)" data-zh="小Lin说" data-en="History">小Lin说</a></li>
                         </ul>
                     </li>
                     <li class="nav-dropdown">
@@ -2679,7 +2679,7 @@
             <!-- 邮箱订阅 -->
             <div style="margin-top: 1.5rem; display: flex; align-items: center; gap: 0.8rem;">
                 <input type="email" id="subscribeEmail" placeholder="your@email.com" style="padding: 0.9rem 1.5rem; background: var(--bg-card); border: 1px solid var(--border); border-radius: 50px; color: var(--text-primary); font-size: 1rem; width: 300px;">
-                <button type="button" onclick="copySubscribeEmail()" style="padding: 0.9rem 2rem; background: var(--accent); color: var(--button-text-dark); border: none; border-radius: 50px; font-size: 1rem; font-weight: 600; cursor: pointer; white-space: nowrap;">订阅更新</button>
+                <button type="button" onclick="copySubscribeEmail()" style="padding: 0.9rem 2rem; background: var(--accent); color: var(--button-text-dark); border: none; border-radius: 50px; font-size: 1rem; font-weight: 600; cursor: pointer; white-space: nowrap;" data-zh="订阅更新" data-en="Subscribe">订阅更新</button>
             </div>
         </div>
     </section>
@@ -2697,7 +2697,7 @@
         <div class="search-filter-section">
             <!-- 搜索框 -->
             <div class="search-box">
-                <input type="text" id="searchInput" placeholder="搜索文章..." oninput="filterArticles()">
+                <input type="text" id="searchInput" placeholder="搜索文章..." data-zh-placeholder="搜索文章..." data-en-placeholder="Search articles..." oninput="filterArticles()">
                 <button class="search-btn">🔍</button>
             </div>
 
@@ -2719,7 +2719,7 @@
                     <span data-zh="人生哲学" data-en="Life Philosophy">人生哲学</span>
                 </button>
                 <button class="filter-btn" data-category="productivity" onclick="filterByCategory('productivity')">
-                    <span data-zn="效率提升" data-en="Productivity">效率提升</span>
+                    <span data-zh="效率提升" data-en="Productivity">效率提升</span>
                 </button>
             </div>
 
@@ -2941,7 +2941,7 @@
         <p class="footer-motto" data-zh="用心思考 · 持续创作 · 终身成长" data-en="Think Deeply · Create Continuously · Grow Constantly">用心思考 · 持续创作 · 终身成长</p>
         <p style="margin-top: 1rem; font-size: 0.85rem; color: var(--text-secondary);">
             <a href="rss.xml" style="color: var(--accent); text-decoration: none;" data-zh="📡 RSS订阅" data-en="📡 RSS Subscribe">📡 RSS订阅</a>
-            <span style="margin-left: 1rem; font-size: 0.85rem;">（复制链接到RSS阅读器）</span>
+            <span data-zh="（复制链接到RSS阅读器）" data-en="(Copy link to RSS reader)">（复制链接到RSS阅读器）</span>
         </p>
     </footer>
     </div>
@@ -3466,7 +3466,7 @@
                             "在信息爆炸的时代，注意力是最稀缺的资源。" —— 赫伯特·西蒙
                         </blockquote>
 
-                        <h2>实践建议：30天注意力挑战</h2>
+                        <h2 data-zh="实践建议：30天注意力挑战" data-en="Practical Tips: 30-Day Attention Challenge">实践建议：30天注意力挑战</h2>
                         <p><strong>第1周：意识觉醒</strong></p>
                         <ul>
                             <li>记录每次拿起手机的原因</li>
