修复index.html语言初始化和products.html重复声明currentTheme错误

--- a/index.html
+++ b/index.html
@@ -3757,10 +3757,8 @@
         // 初始化语言
         function initLanguage() {
             const savedLang = localStorage.getItem('preferred-lang') || 'zh';
-
-            if (savedLang !== 'zh') {
-                switchLanguage(savedLang);
-            }
+            currentLang = savedLang;
+            switchLanguage(savedLang);
         }
         
         // 绑定语言切换按钮
